Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122267

Manual testing - data points in tst_minimalscatter stay hidden

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.0 Beta3, 6.9.0 FF
    • 6.8.0 FF
    • Graphs: 3D
    • None
    • Windows
    • 5906dcdb8 (dev), 0d73847a3 (6.8)

      In the manual test tst_minimalscatter, the data points will stay hidden after being deselected.

       

      Steps to reproduce:

      1. Left-click one of the data points.
      2. Left-click another data point. Notice that the previously selected data point is now invisible.
      3. Left-click the last data point. Notice that both the previously selected data points are now invisible.
      4. Left-click the background. Notice that all data points are now visible.
      5. Repeat step 1 to step 3, and rotate the graph. Notice that all data points are now visible.

       

      Expected behavior:

      The data points should return to their regular color when no longer selected.

       

      Observed behavior:

      The data points are made hidden when selected, but they stay hidden after being deselected. The hidden data points are only made visible again if you left-click the background, thus clearing the selection, or if you rotate the graph.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            chrisrl Chris Lerner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes