Fix disappearing points when selecting new points

Fixes: QTBUG-122267
Change-Id: I0dec041150d692baddc2724c455d9ef9be3e5238
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 5906dcdb8448fc5a9a71cf19b917829a41c2b4bf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>